Navbar Gap: Bug with whitespace above on mobile
Resolved an issue with whitespace appearing above Navbar and below dynamic background when viewed on mobile.

--- a/styles.css
+++ b/styles.css
@@ -273,7 +273,7 @@ a:link, a:visited {
 
 #dynamic-background {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   position: absolute;
   top: 0;
   left: 0;
